# diff-score

./: Cargo.toml  README.md
diff-score-derive/: Cargo.toml
diff-score-derive/src/: lib.rs
src/: impls.rs  impls_iter.rs  impls_json.rs  lib.rs  with.rs
test-diff-score/: Cargo.toml
test-diff-score/src/: lib.rs
