[workspace]
resolver = "2"
members = [".", "diff-score-derive", "test-diff-score"]

[workspace.dependencies]
rstest = "0.25.0"

[package]
name = "diff-score"
version = "0.1.0"
edition = "2024"

[dependencies]
diff-score-derive = { path = "./diff-score-derive" }

[dev-dependencies]
rstest.workspace = true
